cambios cta initial

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -3,9 +3,12 @@
 // Config vars
 $kaldi-red: #5f2ee5
 $kaldi-red-invert: #fff
-
+$greencj: #47BFA4
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
+$family-sans-serif : sans-serif, Euclid
+$family-primary: $family-sans-serif
+
 
 .content .taglist
   list-style: none
