update changes about hero and cta

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -8,6 +8,8 @@ $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
 $family-sans-serif : sans-serif, Euclid
 $family-primary: $family-sans-serif
+$secondary: $greencj
+$secondary-invert: $kaldi-red-invert
 
 
 .content .taglist
